<resources>
    <string name="action_settings">Settings</string>

    <!--    Dialogs-->
    <string name="dialog_warning_distance">¡Advertencia! El robot se moverá al confirmar.</string>
    <string name="dialog_action_confirm">Confirmar</string>
    <string name="dialog_action_cancel">Cancelar</string>
    <string name="dialog_action_title">Distancia</string>

    <!--    Status Data screen-->
    <string name="title_status_screen">Estado general</string>
    <string name="title_aggressiveness">Agresividad</string>
    <string name="title_status_robot">Estado robot</string>
    <string name="title_connection_status">Estado conexion</string>
    <string name="title_connection_local_ip">Dirección IP local:</string>
    <string name="title_robot_connection_status">Estado conexion robot:</string>
    <string name="title_raspi_connection_status">Estado conexion Raspi:</string>
    <string name="title_temperature_status">Temperatura</string>
    <string name="placeholder_local_ip">Local IP: %s</string>
    <string name="title_battery_temp">Bateria</string>
    <string name="title_motorboard_temp">Motor controller</string>
    <string name="title_mainboard_temp">Mainboard</string>
    <string name="title_imu_temp">IMU</string>

    <string name="variable_not_available">N/A</string>

    <!--    Placeholders-->
    <string name="placeholder_battery_percent">%s %%</string>
    <string name="placeholder_battery_voltage">%.1fV</string>
    <string name="placeholder_rssi">%d dbm</string>
    <string name="placeholder_packets_rate">rx: %d pps</string>
    <string name="placeholder_temp">%.1f ºC</string>

    <!--    tabsLayout-->
    <string name="tab_status">Status</string>
    <string name="tab_navigation">Navegacion</string>
    <string name="tab_analisis">Analisis</string>
    <string name="tab_settings">Configuracion</string>

    <!--    Settings screen-->
    <string name="settings_group_pid_title">Ajustes PID</string>
    <string name="settings_group_general_title">Ajustes generales</string>
    <string name="settings_group_connection_title">Ajustes conexion</string>

    <string name="pid_parameter_p_title">Parametro P:</string>
    <string name="pid_parameter_i_title">Parametro I:</string>
    <string name="pid_parameter_d_title">Parametro D:</string>
    <string name="pid_parameter_limits_title">Limites de seguridad:</string>
    <string name="pid_value_default">0.00</string>
    <string name="btn_pid_sync">Sync</string>
    <string name="btn_pid_save">Guardar</string>
    <string name="btn_pid_reset">Deshacer</string>
    <string name="value_slider_format">%.2f</string>
    <string name="general_commands_calibrate_imu_title">Calibrar IMU</string>
    <string name="general_command_btn_calibrate">Calibrar</string>
    <string name="general_command_clean_wheels_title">Limpieza de ruedas</string>
    <string name="general_command_btn_clean_left">Limpiar rueda izq.</string>
    <string name="general_command_btn_clean_right">Limpiar rueda der.</string>
    <string name="general_command_test_angle_pid">Test Pid Angle</string>
    <string name="general_command_test_angle_start">Iniciar</string>

    <string-array name="dropdown_menu_pid_items">
        <item>PID ANGLE</item>
        <item>PID POS</item>
        <item>PID SPEED</item>
        <item>PID YAW</item>
    </string-array>
    <string name="settings_connection_robot_title">Direccion server robot</string>
    <string name="settings_connection_raspi_title">Direccion server raspi</string>

    <!--    Mapper status connection -->
    <string name="status_connection_disconnected">Desconectado</string>
    <string name="status_connection_waiting">Esperando conexion</string>
    <string name="status_connection_searching">Buscando</string>
    <string name="status_connection_connected">Conectado</string>
    <string name="status_connection_error">Reintentar</string>

    <!--    Mapper status robot -->
    <string name="status_robot_init">Inicializando</string>
    <string name="status_robot_disable">Deshabilitado</string>
    <string name="status_robot_enable">Armado</string>
    <string name="status_robot_stabilized">Estabilizado</string>
    <string name="status_robot_charging">Cargando</string>
    <string name="status_robot_test_mode">TEST MODE</string>
    <string name="status_robot_error">Error</string>
    <string name="status_robot_error_limit_speed">Error speed</string>
    <string name="status_robot_error_mcb">Error MCB</string>
    <string name="status_robot_error_imu">Error IMU</string>
    <string name="status_robot_error_hall_r">Error HALL R</string>
    <string name="status_robot_error_hall_l">Error HALL L</string>
    <string name="status_robot_error_battery">Error battery</string>

    <!--    Navigation screen-->
    <string name="title_forward">Avanzar</string>
    <string name="title_backward">Retroceder</string>
    <string name="placeholder_distances">%.2f cm</string>
    <string name="unknown_distance">-- cm</string>

    <!--    Analisis screen-->
    <string name="dataset_title">Datasets</string>
    <string name="placeholder_position">Pos: %.2fmts</string>
    <string name="placeholder_roll">Roll:  %.2f</string>
    <string name="placeholder_pitch">Pitch:  %.2f</string>
    <string name="placeholder_yaw">Yaw:  %.2f</string>

    <!--    RadioGroup dataset select-->
    <string name="dataset_imu_data">IMU Data</string>
    <string name="dataset_power_data">Power Data</string>
    <string name="dataset_pid_angle">PID Angle</string>
    <string name="dataset_pid_pos">PID Pos</string>
    <string name="dataset_pid_yaw">PID Yaw</string>
    <string name="dataset_pid_speed">PID Speed</string>
    <string name="dataset_log_mode">Log mode</string>

    <!--    general config -->
    <string name="general_config_title">General</string>
    <string name="switch_text_title">Autoscale</string>
    <string name="btn_random_title">Random dataset</string>
    <string name="btn_clear_title">Clear data</string>
    <string name="btn_play_title">Play</string>
    <string name="btn_pause_title">Pause</string>

    <!--    Error version firmware dialog -->
    <string name="firmware_dialog_title">Version incompatible</string>
    <string name="firmware_dialog_description">Detectamos que la version del firmware es incompatible con la app</string>

    <!--    Name datasets analisis fragment-->
    <string name="dataset_angle_pitch">"Pitch Angle [°]"</string>
    <string name="dataset_angle_yaw">"Yaw Angle [°]"</string>
    <string name="dataset_angle_roll">"Roll Angle [°]"</string>
    <string name="dataset_speed_motor_l">"Speed L [M/s]"</string>
    <string name="dataset_speed_motor_r">"Speed R [M/s]"</string>
    <string name="dataset_current_motor_l">"Current L [A]"</string>
    <string name="dataset_current_motor_r">"Current R [A]"</string>
    <string name="dataset_set_point_angle">"setPoint Angle [°]"</string>
    <string name="dataset_set_point_pos">"setPoint Pos [Cm]"</string>
    <string name="dataset_set_point_yaw">"setPoint Yaw [°]"</string>
    <string name="dataset_set_point_speed">"setPoint Speed [M/s]"</string>
    <string name="dataset_output_yaw">"Output Yaw"</string>
    <string name="dataset_position_meters">"Position [Cm]"</string>
    <string name="dataset_speed">"Actual Speed [M/s]"</string>
    <string name="dataset_battery_level">"Battery Level [%]"</string>
    <string name="dataset_default">"none"</string>

    <string name="dearmed_button">Desarmar</string>

    <string name="unknown_ip">IP desconocida</string>
</resources>