<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/status_bar_Layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black_80_percent"
    android:orientation="horizontal"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.statusBarFragment.StatusBarFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:gravity="center"
        android:background="@color/black_80_percent"
        >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_status"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:background="@drawable/background_btn_status"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text="prueba"
            />

        <TextView
            android:id="@+id/tv_packets_rate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/placeholder_packets_rate"
            android:layout_marginStart="8dp"
            style="@style/styleTvStatusBar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/divider5"
            tools:text = "rx: 40 pps"
            />


        <View
            android:id="@+id/divider5"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/red_80_percent"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            app:layout_constraintStart_toEndOf="@id/tv_rssi"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            android:id="@+id/tv_rssi"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/placeholder_rssi"
            android:layout_marginStart="4dp"
            style="@style/styleTvStatusBar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/ib_strength"
            tools:text = "-70 dbm"
            />

        <ImageButton
            android:id="@+id/ib_strength"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/network_wifi_0"
            android:layout_marginStart="16dp"
            android:padding="4dp"
            android:background="@color/transparent"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/tv_battery_percent"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/placeholder_battery_percent"
            android:layout_marginEnd="8dp"
            style="@style/styleTvStatusBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text = "12 %"
            />

        <ImageButton
            android:id="@+id/ib_battery_status"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_battery_unknown"
            android:background="@color/transparent"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toStartOf="@id/tv_battery_percent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            android:id="@+id/tv_battery_voltage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/placeholder_battery_voltage"
            android:layout_marginEnd="4dp"
            style="@style/styleTvStatusBar"
            app:layout_constraintEnd_toStartOf="@id/ib_battery_status"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text = "19.2v"
            />

        <View
            android:id="@+id/divider3"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/red_80_percent"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            app:layout_constraintEnd_toStartOf="@id/tv_battery_voltage"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            android:id="@+id/tv_temperature"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/placeholder_temp"
            android:layout_marginEnd="8dp"
            style="@style/styleTvStatusBar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/divider3"
            tools:text = "18.2 ºC"
            />

        <ImageButton
            android:id="@+id/ib_temperature"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_temp"
            android:layout_marginEnd="4dp"
            android:background="@color/transparent"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_temperature"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>